links and text spacings fixed

--- a/styles.css
+++ b/styles.css
@@ -560,11 +560,11 @@ a {
     }
     .hero-text {
         min-width: 100vw;
-        padding: 3rem 1rem 0 1rem;
+        padding: 4rem 1rem 1rem 1rem;
         text-align: left;
     }
     .hero-text h1{
-        font-size: 3rem; /* Further reduce font size */
+        font-size: 2rem; /* Further reduce font size */
         padding: 0;
     }
 
@@ -2747,7 +2747,7 @@ a {
         max-width: 100vw;
     }
     .hero-activismo h1{
-        font-size: 3rem;
+        font-size: 2rem;
     }
     .hero-activismo p{
         font-size: 2rem;
@@ -2799,6 +2799,9 @@ a {
         margin: 0;
         max-width: 100vw;
     }
+    .hero-activismo a{
+        font-size: 1.8rem;
+    }
 
     .hero-activismo .hero-content {
         padding: 0px;
@@ -2813,7 +2816,8 @@ a {
         overflow-x: hidden;
     }
     .hero-activismo .hero-text h1{
-        align-items: left;
+        align-items: left;        
+        font-size: 2rem;
         padding: 0;
         margin: 0;
         text-align: left;
@@ -2828,11 +2832,9 @@ a {
         text-align: left;
         max-width: 100vw;
         overflow-x: hidden;
-        font-size: 1.8rem;
+        font-size: 1.5rem;
     }
-    .hero-activismo a{
-        font-size: 1.8rem;
-    }
+    
     .topic-section {
         margin: 1rem 0 0 0;
     }
@@ -2875,7 +2877,7 @@ a {
 
 .hero-formacion h1{
     font-size: 3rem;
-    color: rgb(255, 128, 128);
+    color: rgb(255, 98, 98);
 }
 .hero-formacion p{
     font-size: 2rem;
@@ -3064,9 +3066,13 @@ a {
         padding: 5rem 2rem 0 2rem;
         margin: 0;
     }
+    .hero-formacion .hero-text h1 {
+        font-size: 2rem;
+    }
 
-    .hero-formacion .hero-text p{
-        padding: 1rem 0;
+    .hero-formacion .hero-text p {
+        font-size: 1.5rem;
+        padding: 0;
         margin: 0;
     }
     .hero-formacion .hero-text a{
@@ -3273,6 +3279,7 @@ a {
     }
     .colaboracion-section h1{
         font-size: 2rem;
+        text-align: center;
     }
     .colaboracion-section .logo{
         min-width: 8rem;
@@ -3839,11 +3846,11 @@ a {
     }
     .blog-cta h2{
         font-size: 1.5rem;
-        padding: 0 0 1rem 0;
+        padding: 1rem 0 0 0;
         margin: 0;
     }
     .blog-cta p{
-        padding: 1rem 0;
+        padding: 1rem 0 1rem 0;
         font-size: 1.5rem;
     }
     .blog-cta a{
